Now it has to be done Fixed the problem with ./philo 5 800 200 200 7 that input was make either think for to long or eat for to long

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -11,7 +11,10 @@ CFLAGS = -Wall -Wextra -Werror -g #-fsanitize=thread
 SRC =	main.c	\
 		mutex_utils.c	\
 		routine.c	\
+		threads.c	\
+		time.c	\
 		utils.c	\
+		utils2.c	\
 
 lib = lib
 LIB = $(lib)/lib.a
